--- a/plugins/Navigation/assets/css/navigation.css
+++ b/plugins/Navigation/assets/css/navigation.css
@@ -1,1 +1,120 @@
-/* Navigation CSS */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
+#bitsy_navigation_horizontal {
+  background: #f96e5b;
+  width: auto;
+}
+#bitsy_navigation_horizontal ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  display: block;
+  zoom: 1;
+}
+#bitsy_navigation_horizontal ul:after {
+  content: " ";
+  display: block;
+  font-size: 0;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+#bitsy_navigation_horizontal ul li {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+#bitsy_navigation_horizontal.align-right ul li {
+  float: right;
+}
+#bitsy_navigation_horizontal.align-center ul {
+  text-align: center;
+}
+#bitsy_navigation_horizontal ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  padding: 15px 25px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 14px;
+  position: relative;
+  -webkit-transition: color .25s;
+  -moz-transition: color .25s;
+  -ms-transition: color .25s;
+  -o-transition: color .25s;
+  transition: color .25s;
+}
+#bitsy_navigation_horizontal ul li a:hover {
+  color: #333333;
+}
+#bitsy_navigation_horizontal ul li a:hover:before {
+  width: 100%;
+}
+#bitsy_navigation_horizontal ul li a:after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: -3px;
+  top: 19px;
+  height: 6px;
+  width: 6px;
+  background: #ffffff;
+  opacity: .5;
+}
+#bitsy_navigation_horizontal ul li a:before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 0;
+  background: #333333;
+  -webkit-transition: width .25s;
+  -moz-transition: width .25s;
+  -ms-transition: width .25s;
+  -o-transition: width .25s;
+  transition: width .25s;
+}
+#bitsy_navigation_horizontal ul li.last > a:after,
+#bitsy_navigation_horizontal ul li:last-child > a:after {
+  display: none;
+}
+#bitsy_navigation_horizontal ul li.active a {
+  color: #333333;
+}
+#bitsy_navigation_horizontal ul li.active a:before {
+  width: 100%;
+}
+#bitsy_navigation_horizontal.align-right li.last > a:after,
+#bitsy_navigation_horizontal.align-right li:last-child > a:after {
+  display: block;
+}
+#bitsy_navigation_horizontal.align-right li:first-child a:after {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  #bitsy_navigation_horizontal ul li {
+    float: none;
+    display: block;
+  }
+  #bitsy_navigation_horizontal ul li a {
+    width: 100%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-bottom: 1px solid #fb998c;
+  }
+  #bitsy_navigation_horizontal ul li.last > a,
+  #bitsy_navigation_horizontal ul li:last-child > a {
+    border: 0;
+  }
+  #bitsy_navigation_horizontal ul li a:after {
+    display: none;
+  }
+  #bitsy_navigation_horizontal ul li a:before {
+    display: none;
+  }
+}
