add navigation subelements

--- a/assets/scss/bitsy_main.scss
+++ b/assets/scss/bitsy_main.scss
@@ -12,6 +12,8 @@
 
 body {
     background-color: $mainBackgroundColor;
+    margin: 0;
+    padding: 0;
 }
 .bitsy_content, .bitsy_header, .bitsy_footer {
     
